# higi13

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_EN.md  README_ES.md  SECURITY.md  api.md  architecture.md  bugfixes.md  commit_1.md  commit_10.md  commit_11.md  commit_12.md  commit_13.md  commit_14.md  commit_15.md  commit_16.md  commit_17.md  commit_18.md  commit_19.md  commit_2.md  commit_20.md  commit_3.md  commit_4.md  commit_5.md  commit_6.md  commit_7.md  commit_8.md  commit_9.md  config.md  docker-compose.yml  docs.md  features.md  index.js  migrations.md  (+7 more)
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  node.yml  pytest.yml
src/: config.py  main.py  utils.py
src/main/java/com/higi13/: App.java
tests/: test_main.py
