[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "higi13-profile"
version = "1.0.0"
description = "GitHub Profile Project"
requires-python = ">=3.11"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
